--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
                         <label for="email" class="block text-sm font-medium text-slate-700">Email Address</label>
                         <input type="email" id="email" name="Email" required class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="your.email@example.com">
                     </div>
-                    <div>
-                        <label for="phone" class="block text-sm font-medium text-slate-700">Phone Number (Optional)</label>
-                        <input type="tel" id="phone" name="Phone" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="703-867-9833">
-                    </div>
+                    <!-- Phone number input removed -->
                     <div>
                         <label for="projectType" class="block text-sm font-medium text-slate-700">Type of Project</label>
                         <select id="projectType" name="Project Type" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out">
@@ -125,9 +122,7 @@
             <p class="text-slate-700 text-md mb-1">
                 Email: <a href="mailto:Connect@Imperial-Contracting-Group.com" class="text-blue-600 hover:underline">Connect@Imperial-Contracting-Group.com</a>
             </p>
-            <p class="text-slate-700 text-md">
-                Phone: <a href="tel:+17038679833" class="text-blue-600 hover:underline">703-867-9833</a>
-            </p>
+            <!-- Phone number removed from footer -->
             <p class="text-slate-500 text-sm mt-4">
                 &copy; 2025 Imperial Contracting Group LLC. All rights reserved.
             </p>
