--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imperial Contracting Group LLC - Your Renovation Partner</title>
+    <title>Imperial Contracting Group - Your Renovation Partner</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -28,7 +28,7 @@
         <!-- Header Section -->
         <header class="w-full max-w-4xl text-center mb-8">
             <h1 class="text-5xl md:text-6xl font-extrabold text-blue-800 mb-2 rounded-lg">
-                Imperial Contracting Group LLC
+                Imperial Contracting Group 
             </h1>
             <p class="text-xl md:text-2xl text-slate-600 font-medium">
                 Your Trusted Partner for Exceptional Home Renovations
@@ -44,7 +44,7 @@
                     Transforming Visions into Reality
                 </h2>
                 <p class="text-lg text-slate-700 mb-4 leading-relaxed">
-                    At Imperial Contracting Group LLC, we specialize in comprehensive **full home renovations** that breathe new life into your living spaces. With a commitment to quality and craftsmanship, we turn your dreams into beautifully realized homes.
+                    At Imperial Contracting Group, we specialize in comprehensive **full home renovations** that breathe new life into your living spaces. With a commitment to quality and craftsmanship, we turn your dreams into beautifully realized homes.
                 </p>
                 <div class="space-y-3 mb-6">
                     <div class="flex items-start">
@@ -114,7 +114,7 @@
         <!-- Footer Section -->
         <footer class="w-full max-w-4xl text-center mt-8 p-4 bg-slate-100 rounded-2xl shadow-lg">
             <p class="text-slate-700 text-md mb-2">
-                Imperial Contracting Group LLC
+                Imperial Contracting Group 
             </p>
             <p class="text-slate-700 text-md mb-1">
                 17 Clarion Drive, Fredericksburg, VA 22405
