--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imperial Contracting Group - Your Renovation Partner</title>
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -20,25 +18,39 @@
             border-color: #1d4ed8 !important; /* Blue-700 */
             box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.5) !important; /* Blue-500 with opacity */
         }
+        /* Style for the message box */
+        #form-message {
+            margin-top: 1rem;
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            text-align: center;
+            font-weight: 500;
+            display: none; /* Hidden by default */
+        }
+        #form-message.success {
+            background-color: #d1fae5; /* green-100 */
+            color: #065f46; /* green-700 */
+        }
+        #form-message.error {
+            background-color: #fee2e2; /* red-100 */
+            color: #991b1b; /* red-700 */
+        }
     </style>
 </head>
 <body class="antialiased">
     <div class="min-h-screen flex flex-col items-center justify-center p-4 bg-gradient-to-br from-blue-50 to-indigo-100">
 
-        <!-- Header Section -->
         <header class="w-full max-w-4xl text-center mb-8">
             <h1 class="text-5xl md:text-6xl font-extrabold text-blue-800 mb-2 rounded-lg">
-                Imperial Contracting Group 
+                Imperial Contracting Group
             </h1>
             <p class="text-xl md:text-2xl text-slate-600 font-medium">
                 Your Trusted Partner for Exceptional Home Renovations
             </p>
         </header>
 
-        <!-- Main Content Area -->
         <main class="w-full max-w-4xl bg-white shadow-xl rounded-2xl p-6 md:p-10 flex flex-col lg:flex-row gap-8 lg:gap-12">
 
-            <!-- Company Overview / Value Proposition -->
             <section class="lg:w-1/2 flex flex-col justify-center">
                 <h2 class="text-3xl font-bold text-blue-700 mb-4 rounded-lg">
                     Transforming Visions into Reality
@@ -68,7 +80,6 @@
                 </div>
             </section>
 
-            <!-- Lead Capture Form -->
             <section class="lg:w-1/2 bg-blue-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-2xl font-bold text-blue-700 mb-6 text-center rounded-lg">
                     Ready to Start Your Renovation?
@@ -76,19 +87,18 @@
                 <p class="text-slate-600 mb-6 text-center">
                     Tell us about your project, and we'll get in touch!
                 </p>
-                <form class="space-y-4" action="mailto:Connect@Imperial-Contracting-Group.com" method="post" enctype="text/plain">
+                <form id="contactForm" class="space-y-4" action="/submit-form" method="POST">
                     <div>
                         <label for="name" class="block text-sm font-medium text-slate-700">Your Name</label>
-                        <input type="text" id="name" name="Name" required class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="John Doe">
+                        <input type="text" id="name" name="name" required class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="John Doe">
                     </div>
                     <div>
                         <label for="email" class="block text-sm font-medium text-slate-700">Email Address</label>
-                        <input type="email" id="email" name="Email" required class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="your.email@example.com">
+                        <input type="email" id="email" name="email" required class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out" placeholder="your.email@example.com">
                     </div>
-                    <!-- Phone number input removed -->
                     <div>
                         <label for="projectType" class="block text-sm font-medium text-slate-700">Type of Project</label>
-                        <select id="projectType" name="Project Type" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out">
+                        <select id="projectType" name="projectType" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out">
                             <option value="">Select an option</option>
                             <option value="Full Home Renovation">Full Home Renovation</option>
                             <option value="Kitchen Remodel">Kitchen Remodel</option>
@@ -99,7 +109,7 @@
                     </div>
                     <div>
                         <label for="message" class="block text-sm font-medium text-slate-700">Project Details</label>
-                        <textarea id="message" name="Message" rows="4" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out placeholder-slate-400" placeholder="Briefly describe your renovation goals, location, and timeline..."></textarea>
+                        <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150 ease-in-out" placeholder="Briefly describe your renovation goals, location, and timeline..."></textarea>
                     </div>
                     <div class="pt-2">
                         <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-lg font-semibold text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition duration-150 ease-in-out">
@@ -107,27 +117,77 @@
                         </button>
                     </div>
                 </form>
+                <div id="form-message" class="hidden"></div>
             </section>
 
         </main>
 
-        <!-- Footer Section -->
         <footer class="w-full max-w-4xl text-center mt-8 p-4 bg-slate-100 rounded-2xl shadow-lg">
             <p class="text-slate-700 text-md mb-2">
-                Imperial Contracting Group 
+                Imperial Contracting Group
             </p>
             <p class="text-slate-700 text-md mb-1">
                 17 Clarion Drive, Fredericksburg, VA 22405
             </p>
             <p class="text-slate-700 text-md mb-1">
-                Email: <a href="mailto:Connect@Imperial-Contracting-Group.com" class="text-blue-600 hover:underline">Connect@Imperial-Contracting-Group.com</a>
+                Email: <a href="mailto:Connect@Imperial-Contracting-Group.com" class="text-blue-600 hover:underline">Connect@Imperial-Conting-Group.com</a>
             </p>
-            <!-- Phone number removed from footer -->
             <p class="text-slate-500 text-sm mt-4">
                 &copy; 2025 Imperial Contracting Group LLC. All rights reserved.
             </p>
         </footer>
 
     </div>
+
+    <script>
+        // JavaScript to handle form submission via Fetch API
+        const contactForm = document.getElementById('contactForm');
+        const formMessage = document.getElementById('form-message');
+
+        contactForm.addEventListener('submit', async (event) => {
+            event.preventDefault(); // Prevent default mailto: action
+
+            const formData = new FormData(contactForm);
+            const formObject = {};
+            formData.forEach((value, key) => {
+                formObject[key] = value;
+            });
+
+            // Display loading message
+            formMessage.classList.remove('success', 'error');
+            formMessage.classList.add('bg-blue-100', 'text-blue-700');
+            formMessage.textContent = 'Submitting...';
+            formMessage.style.display = 'block';
+
+            try {
+                const response = await fetch('/submit-form', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json' // Indicate that we accept JSON response
+                    },
+                    body: JSON.stringify(formObject)
+                });
+
+                const result = await response.json(); // Always parse JSON response
+
+                if (response.ok) {
+                    formMessage.classList.remove('bg-blue-100', 'text-blue-700', 'error');
+                    formMessage.classList.add('success');
+                    formMessage.textContent = result.message || 'Thank you for your inquiry! We will get back to you soon.';
+                    contactForm.reset(); // Clear the form
+                } else {
+                    formMessage.classList.remove('bg-blue-100', 'text-blue-700', 'success');
+                    formMessage.classList.add('error');
+                    formMessage.textContent = result.error || 'There was an error submitting your form. Please try again.';
+                }
+            } catch (error) {
+                console.error('Submission error:', error);
+                formMessage.classList.remove('bg-blue-100', 'text-blue-700', 'success');
+                formMessage.classList.add('error');
+                formMessage.textContent = 'Network error or unable to connect. Please check your internet connection.';
+            }
+        });
+    </script>
 </body>
 </html>
