--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     17 Clarion Drive, Fredericksburg, VA 22405
                 </p>
                 <p class="text-slate-700 text-md mb-1">
-                    Email: <a href="mailto:Connect@Imperial-Conting-Group.com" class="text-blue-600 hover:underline">Connect@Imperial-Conting-Group.com</a>
+                    Email: <a href="mailto:Connect@Imperial-Contracting-Group.com" class="text-blue-600 hover:underline">Connect@Imperial-Contracting-Group.com</a>
                 </p>
                 <p class="text-slate-500 text-sm mt-4">
                     &copy; 2025 Imperial Contracting Group LLC. All rights reserved.
