--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         .svg-icon-hover:hover {
             transform: scale(1.1);
         }
+        /* Custom CSS for the SVG logo */
+        .logo-svg {
+            width: 120px; /* Match placeholder width */
+            height: 60px; /* Match placeholder height */
+            margin: 0 auto;
+            display: block; /* Ensures centering */
+            border-radius: 0.5rem; /* Match rounded-md */
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); /* Match shadow-md */
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -66,8 +75,16 @@
         <!-- Header Section -->
         <header class="w-full max-w-4xl text-center pt-8 pb-4 mb-8">
             <div class="mb-4">
-                <!-- Placeholder for Logo - Replace with your actual logo SVG or image -->
-                <img src="https://placehold.co/120x60/888/fff?text=Your+Logo" alt="Imperial Contracting Group Logo" class="mx-auto rounded-md shadow-md">
+                <!-- Custom SVG Logo -->
+                <svg class="logo-svg" viewBox="0 0 120 60" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="120" height="60" rx="8" fill="#FFFFFF"/>
+                    <!-- Main "I" shape -->
+                    <path d="M40 15 L40 45 L45 45 L45 15 L40 15 Z" fill="#2563eb"/>
+                    <!-- Stylized "C" with roof/arrow element -->
+                    <path d="M70 20 C70 15 65 10 60 10 C55 10 50 15 50 20 L50 25 L55 25 L55 20 C55 17.5 57.5 15 60 15 C62.5 15 65 17.5 65 20 L65 40 L50 40 L50 45 L70 45 L70 20 Z" fill="#1d4ed8"/>
+                    <!-- Small roof/building top -->
+                    <path d="M55 20 L60 15 L65 20 L55 20 Z" fill="#93c5fd"/>
+                </svg>
             </div>
             <h1 class="text-5xl md:text-6xl font-extrabold text-blue-800 mb-2 tracking-tight leading-tight rounded-lg">
                 Imperial Contracting Group
