--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <header class="w-full max-w-4xl text-center pt-8 pb-4 mb-8">
             <div class="mb-4">
                 <!-- Image Logo -->
-                <img src="https://placehold.co/120x120/000000/FFFFFF?text=YOUR+LOGO+HERE" alt="Imperial Contracting Group Logo" class="header-logo">
+                <img src="icg logo.jpg" alt="Imperial Contracting Group Logo" class="header-logo">
             </div>
             <h1 class="text-5xl md:text-6xl font-extrabold text-blue-800 mb-2 tracking-tight leading-tight rounded-lg">
                 Imperial Contracting Group
