--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="flex items-start">
                         <svg class="h-6 w-6 text-blue-500 mr-3 flex-shrink-0 svg-icon-hover" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
                         <p class="text-slate-700 text-lg leading-relaxed">
-                            Owner with <strong>15 years of contracting experience</strong>, continuously licensed in VA DPOR as a Class A Residential Specialty contractor since June 10, 2022.
+                            Over <strong>15 years of contracting experience</strong>, continuously licensed in VA DPOR as a Class A Residential Specialty contractor since June 10, 2022.
                         </p>
                     </div>
                 </div>
