--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght=300;400;600;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -175,7 +175,7 @@
             </p>
             <p class="text-slate-700 text-md mb-1 flex items-center justify-center">
                 <i class="fas fa-envelope mr-2 text-blue-600"></i> <!-- Mail icon -->
-                Email: <a href="mailto:Connect@Imperial-Contracring-Group.com" class="text-blue-600 hover:underline ml-1">Connect@Imperial-Contracring-Group.com</a>
+                Email: <a href="mailto:Connect@Imperial-Contracting-Group.com" class="text-blue-600 hover:underline ml-1">Connect@Imperial-Contracting-Group.com</a>
             </p>
             <p class="text-slate-500 text-sm mt-4">
                 &copy; 2025 Imperial Contracting Group LLC. All rights reserved.
@@ -192,8 +192,12 @@
         contactForm.addEventListener('submit', async (event) => {
             event.preventDefault(); // Prevent default form submission
 
-            // Create FormData object directly from the form
+            // Create a plain object from form data for JSON serialization
             const formData = new FormData(contactForm);
+            const formObject = {};
+            formData.forEach((value, key) => {
+                formObject[key] = value;
+            });
 
             // Display loading message
             formMessage.classList.remove('success', 'error');
@@ -202,33 +206,30 @@
             formMessage.style.display = 'block';
 
             try {
-                // Send FormData directly to the Cloudflare Worker.
-                // fetch automatically sets the Content-Type header to multipart/form-data
-                // when the body is a FormData object.
+                // Send JSON data to the Cloudflare Worker.
+                // The Worker expects JSON (request.json()), so we must send JSON.
                 const response = await fetch('/submit-form', {
                     method: 'POST',
-                    body: formData, // Send FormData object directly
-                    // Explicitly set mode: 'cors' for cross-origin requests, though
-                    // Cloudflare Pages often handles this automatically for /submit-form paths.
-                    mode: 'cors'
+                    headers: {
+                        'Content-Type': 'application/json', // Explicitly set Content-Type to JSON
+                        'Accept': 'application/json' // Indicate that we accept JSON response
+                    },
+                    body: JSON.stringify(formObject) // Stringify the form object to JSON
                 });
 
-                // Cloudflare Worker is designed to return plain text for success/error messages.
-                // It does not return JSON. So, we'll read the response as text.
-                const responseText = await response.text(); 
+                // The Worker is designed to return JSON for both success and error messages.
+                const result = await response.json(); 
 
                 if (response.ok) {
                     formMessage.classList.remove('bg-blue-100', 'text-blue-700', 'error');
                     formMessage.classList.add('success');
-                    // The Worker is designed to return the success message directly as plain text.
-                    formMessage.textContent = responseText || 'Thank you for your inquiry! We will get back to you soon.';
-                    contactForm.reset(); // Clear the form
+                    formMessage.textContent = result.message || 'Thank you for your inquiry! We will get back to you soon.';
+                    contactForm.reset(); // Clear the form on success
                 } else {
                     formMessage.classList.remove('bg-blue-100', 'text-blue-700', 'success');
                     formMessage.classList.add('error');
-                    // The Worker is designed to return the error message directly as plain text.
-                    formMessage.textContent = responseText || 'There was an error submitting your form. Please try again.';
-                    console.error('Form submission failed with status:', response.status, 'Message:', responseText);
+                    formMessage.textContent = result.error || 'There was an error submitting your form. Please try again.';
+                    console.error('Form submission failed with status:', response.status, 'Message:', result.error);
                 }
             } catch (error) {
                 console.error('Network error or unexpected submission error:', error);
